[package]
name = "engine-standalone-tracing"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Aurora engine standalone tracing library. Provides functions and types for extracting geth-like traces from standalone engine execution."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[lib]
crate-type = ["lib"]

[dependencies]
aurora-engine-types = { workspace = true, default-features = false }
aurora-evm = { workspace = true, features = ["tracing"], default-features = false }
hex = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, optional = true }
borsh.workspace = true

[lints]
workspace = true

[features]
default = []
impl-serde = ["aurora-engine-types/impl-serde", "serde"]
