[package]
name = "engine-standalone"
version = "0.1.0"
edition = "2018"
authors = ["Aurora <hello@aurora.dev>"]
description = "Aurora engine standalone library. Provides debugging capabilities."
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
publish = false
autobenches = false

[dependencies]
aurora-engine = { path = "../engine", default-features = false, features = ["std"] }
aurora-engine-types = { path = "../engine-types", default-features = false, features = ["std"] }
aurora-engine-sdk = { path = "../engine-sdk", default-features = false, features = ["std"] }
evm-core = { git = "https://github.com/aurora-is-near/sputnikvm.git", default-features = false }
libc = "0.2"

[dev-dependencies]
hex = { version = "0.4.3", default-features = false }

[features]
default = []
mainnet = []
testnet = []
betanet = []
