[package]
name = "aurora-engine-test-doubles"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
description = "Contains implementations of engine traits suitable for using in tests"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
aurora-engine-types = { workspace = true, features = ["std"] }
aurora-engine-sdk.workspace = true
evm = { workspace = true, features = ["std", "tracing"] }
evm-gasometer.workspace = true
evm-runtime.workspace = true

[lints]
workspace = true
