[package]
name = "aurora-engine-tests-workspace"
version = "1.0.0"
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "GPL-3.0"
publish = false
autobenches = false

[dependencies]
anyhow = "1.0"
aurora-engine = { path = "../engine", default-features = false, features = ["std", "tracing"] }
aurora-engine-types = { path = "../engine-types", default-features = false, features = ["std"] }
aurora-engine-sdk = { path = "../engine-sdk", default-features = false, features = ["std"] }
aurora-engine-precompiles = { path = "../engine-precompiles", default-features = false, features = ["std"] }
aurora-engine-transactions = { path = "../engine-transactions", default-features = false, features = ["std"] }
borsh = { version = "0.9.3", default-features = false }
engine-standalone-storage = { path = "../engine-standalone-storage" }
engine-standalone-tracing = { path = "../engine-standalone-tracing" }
ethabi = "17.1"
evm = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.36.0-aurora", default-features = false, features = ["std", "tracing"] }
evm-runtime = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.36.0-aurora", default-features = false, features = ["std", "tracing"] }
evm-gasometer = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.36.0-aurora", default-features = false, features = ["std", "tracing"] }
hex = { version = "0.4.3", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
near-sdk = { git = "https://github.com/aurora-is-near/near-sdk-rs.git", rev = "7a3fa3fbff84b712050370d840297df38c925d2d" }
near-units = "0.2.0"
rand = "0.8.5"
rlp = { version = "0.5.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_with = "2"
serde_json = "1"
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
workspaces = { git = "https://github.com/near/workspaces-rs.git", tag = "0.5.0" }

[features]
mainnet-test = []
testnet-test = []
error_refund = ["aurora-engine/error_refund", "aurora-engine-precompiles/error_refund"]
