[package]
name = "aurora-engine-tests"
version = "1.0.0"
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "GPL-3.0"
publish = false
autobenches = false

[dependencies]

[dev-dependencies]
aurora-engine = { path = "../engine", default-features = false, features = ["std", "tracing", "impl-serde"] }
aurora-engine-precompiles = { path = "../engine-precompiles", default-features = false, features = ["std"] }
aurora-engine-sdk = { path = "../engine-sdk", default-features = false, features = ["std"] }
aurora-engine-modexp = { path = "../engine-modexp", default-features = false, features = ["std"] }
aurora-engine-test-doubles = { path = "../engine-test-doubles", default-features = false }
aurora-engine-transactions = { path = "../engine-transactions", default-features = false, features = ["std", "impl-serde"] }
aurora-engine-types = { path = "../engine-types", default-features = false, features = ["std", "impl-serde", "borsh-compat"] }
aurora-engine-workspace = { path = "../engine-workspace" }

anyhow = "1"
borsh = { version = "0.10", default-features = false }
bstr = "1.0.1"
byte-slice-cast = { version = "1.0", default-features = false }
criterion = "0.5"
engine-standalone-storage = { path = "../engine-standalone-storage" }
engine-standalone-tracing = { path = "../engine-standalone-tracing", default-features = false, features = ["impl-serde"] }
ethabi = "18.0"
evm = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.38.0-aurora", default-features = false, features = ["std", "tracing"] }
evm-gasometer = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.38.0-aurora", default-features = false, features = ["std", "tracing"] }
evm-runtime = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.38.0-aurora", default-features = false, features = ["std", "tracing"] }
git2 = "0.17"
hex = { version = "0.4.3", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
near-crypto = "0.17"
near-primitives = "0.17"
near-primitives-core = "0.17"
near-vm-errors = "0.17"
near-vm-logic = "0.17"
near-vm-runner = { version = "0.17", default-features = false, features = [ "wasmer2_vm", "wasmtime_vm" ] }
rand = "0.8.5"
rlp = { version = "0.5.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = { version = "0.10.2", default-features = false }
tempfile = "3"
tokio = { version = "1", features = ["macros"] }
walrus = "0.19"

[features]
mainnet-test = []
testnet-test = []
error_refund = ["aurora-engine/error_refund", "aurora-engine-precompiles/error_refund"]
