[package]
name = "aurora-engine-tests"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[dev-dependencies]
aurora-engine = { workspace = true, features = ["std", "tracing", "impl-serde"] }
aurora-engine-hashchain = { workspace = true, features = ["std"] }
aurora-engine-modexp = { workspace = true, features = ["std"] }
aurora-engine-precompiles = { workspace = true, features = ["std"] }
aurora-engine-sdk = { workspace = true, features = ["std"] }
aurora-engine-test-doubles.workspace = true
aurora-engine-transactions = { workspace = true, features = ["std", "impl-serde"] }
aurora-engine-types = { workspace = true, features = ["std", "impl-serde"] }
aurora-engine-workspace.workspace = true

anyhow.workspace = true
borsh.workspace = true
bstr.workspace = true
byte-slice-cast.workspace = true
criterion.workspace = true
engine-standalone-storage.workspace = true
engine-standalone-tracing.workspace = true
ethabi = { workspace = true, features = ["full-serde"] }
evm = { workspace = true, features = ["std", "tracing"] }
evm-gasometer.workspace = true
evm-runtime.workspace = true
git2.workspace = true
hex.workspace = true
libsecp256k1.workspace = true
near-crypto.workspace = true
near-parameters.workspace = true
near-primitives-core.workspace = true
near-primitives.workspace = true
near-sdk.workspace = true
near-vm-runner.workspace = true
rand.workspace = true
reqwest.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
tempfile.workspace = true
tokio.workspace = true
walrus.workspace = true
# To fix REVM dependency issue
once_cell = "1.19"

[features]
mainnet-test = ["aurora-engine-workspace/mainnet-test"]
testnet-test = ["aurora-engine-workspace/testnet-test"]
error_refund = ["aurora-engine/error_refund", "aurora-engine-precompiles/error_refund"]
ext-connector = ["aurora-engine/ext-connector", "aurora-engine-precompiles/ext-connector", "engine-standalone-storage/ext-connector", "aurora-engine-workspace/ext-connector"]
