[package]
name = "aurora-engine-tests"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
cargo-near-build = { workspace = true, optional = true }

[dev-dependencies]
aurora-engine = { workspace = true, features = ["std", "tracing", "impl-serde"] }
aurora-engine-hashchain = { workspace = true, features = ["std"] }
aurora-engine-modexp = { workspace = true, features = ["std"] }
aurora-engine-precompiles = { workspace = true, features = ["std"] }
aurora-engine-sdk = { workspace = true, features = ["std"] }
aurora-engine-test-doubles.workspace = true
aurora-engine-transactions = { workspace = true, features = ["std", "impl-serde"] }
aurora-engine-types = { workspace = true, features = ["std", "impl-serde"] }
aurora-engine-workspace.workspace = true

anyhow.workspace = true
borsh.workspace = true
bstr.workspace = true
cargo-near-build = { workspace = true, features = ["build_internal"] }
criterion.workspace = true
engine-standalone-storage.workspace = true
engine-standalone-tracing.workspace = true
ethabi = { workspace = true, features = ["full-serde"] }
aurora-evm = { workspace = true, features = ["std", "tracing"] }
git2.workspace = true
hex.workspace = true
libsecp256k1.workspace = true
near-crypto.workspace = true
near-parameters.workspace = true
near-primitives-core.workspace = true
near-primitives.workspace = true
near-sdk = { workspace = true, features = ["non-contract-usage"] }
near-vm-runner.workspace = true
rand.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
tempfile.workspace = true
tokio.workspace = true
walrus.workspace = true

[lints]
workspace = true

[features]
error_refund = ["aurora-engine/error_refund", "aurora-engine-precompiles/error_refund"]
# This feature skips heavy BLS tests.
# E.g. of usage the feature: `cargo make test --features skip-bls-tests`
skip-bls-tests = []
