[package]
name = "aurora-engine-transactions"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
aurora-engine-sdk.workspace = true
aurora-engine-types.workspace = true
evm.workspace = true
rlp.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true

[lints]
workspace = true

[features]
std = ["aurora-engine-types/std", "aurora-engine-sdk/std", "evm/std", "rlp/std"]
impl-serde = ["aurora-engine-types/impl-serde", "serde"]
contract = ["aurora-engine-sdk/contract"]
