[package]
name = "aurora-engine-transactions"
version = "1.2.0"
description = "EVM transactions that used in Aurora Engine"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
autobenches = false
publish = true

[dependencies]
aurora-engine-sdk.workspace = true
aurora-engine-types.workspace = true
aurora-evm.workspace = true
rlp.workspace = true
serde = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
hex.workspace = true

[lints]
workspace = true

[features]
std = ["aurora-engine-types/std", "aurora-engine-sdk/std", "aurora-evm/std", "rlp/std"]
impl-serde = ["aurora-engine-types/impl-serde", "serde/alloc"]
contract = ["aurora-engine-sdk/contract"]
