[package]
name = "aurora-engine-types"
version = "1.0.0"
autobenches = false
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
borsh.workspace = true
bs58.workspace = true
hex.workspace = true
primitive-types.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["borsh/std", "hex/std", "primitive-types/std", "primitive-types/serde", "serde/std", "serde_json/std", "rlp/std"]
# `primitive-types/std` is excluded because it's `std` implementation includes a transitive
# dependency on `getrandom` which uses OS call to obtain entropy. Such calls are not
# available in Wasm, therefore we cannot use the `std` implementation of `primitive-types`
# in other Rust contracts.
contracts-std = ["borsh/std", "hex/std"]
impl-serde = ["primitive-types/impl-serde"]
