[package]
name = "aurora-engine-workspace"
version = "0.1.0"
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
readme = "README.md"
description = "Environment for testing Aurora EVM contract"

[dependencies]
aurora-engine-types = { path = "../engine-types", default-features = false, features = [ "std", "impl-serde", "borsh-compat" ] }

anyhow = "1"
near-sdk = "4.1"
near-units = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
workspaces = "0.7"
tokio = { version = "1", features = [ "time" ] }

[dev-dependencies]
hex = "0.4"
lazy_static = "1.4"
