[package]
name = "aurora-engine-workspace"
version = "0.1.0"
description = "Environment for testing Aurora EVM contract"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
aurora-engine-types = { workspace = true, features = ["borsh-compat", "impl-serde", "std"] }
anyhow.workspace = true
near-sdk.workspace = true
near-units.workspace = true
serde.workspace = true
serde_json.workspace = true
workspaces.workspace = true
tokio = { workspace = true, features = [ "time" ] }

[dev-dependencies]
hex.workspace = true
lazy_static.workspace = true

[features]
mainnet-test = []
testnet-test = []
ext-connector = []
