[package]
name = "aurora-engine-workspace"
version = "0.1.0"
description = "Environment for testing Aurora EVM contract"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
aurora-engine-types = { workspace = true, features = ["impl-serde", "std"] }
anyhow.workspace = true
near-gas.workspace = true
near-sdk.workspace = true
near-workspaces.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true

[features]
mainnet-test = []
testnet-test = []
