[package]
name = "aurora-engine"
version = "3.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
autobenches = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aurora-engine-modexp.workspace = true
aurora-engine-precompiles.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
aurora-engine-sdk.workspace = true
bitflags.workspace = true
ethabi.workspace = true
evm.workspace = true
hex.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc.workspace = true

[dev-dependencies]
aurora-engine-test-doubles.workspace = true
digest.workspace = true
test-case.workspace = true

[features]
default = ["std"]
std = ["aurora-engine-types/std", "aurora-engine-sdk/std", "aurora-engine-precompiles/std", "aurora-engine-transactions/std", "ethabi/std", "evm/std", "hex/std", "rlp/std", "serde/std", "serde_json/std"]
contract = ["aurora-engine-sdk/contract", "aurora-engine-precompiles/contract"]
borsh-compat = ["aurora-engine-types/borsh-compat", "aurora-engine-sdk/borsh-compat", "aurora-engine-precompiles/borsh-compat"]
evm_bully = []
log = ["aurora-engine-sdk/log", "aurora-engine-precompiles/log"]
tracing = ["evm/tracing"]
error_refund = ["aurora-engine-precompiles/error_refund"]
integration-test = ["log"]
all-promise-actions = ["aurora-engine-sdk/all-promise-actions"]
mainnet = ["contract", "log", "aurora-engine-sdk/mainnet"]
testnet = ["contract", "log", "aurora-engine-sdk/testnet"]
impl-serde = ["aurora-engine-types/impl-serde", "aurora-engine-transactions/impl-serde", "evm/with-serde"]
