[package]
name = "aurora-engine-precompiles"
version = "0.1.0"
authors = ["NEAR <hello@near.org>"]
edition = "2018"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
publish = false
autobenches = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
# Due to a strange bug, setting this to 3 will cause test failures
opt-level = "z"
debug = false
debug-assertions = true
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
# lto must be enabled in the bench profile as well for
# it to actually happen when running tests with --release
lto = true
opt-level = 3

[dependencies]
