[package]
name = "prelude"
version = "0.1.0"
authors = ["NEAR <hello@near.org>"]
edition = "2018"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
publish = false
autobenches = false

[dependencies]
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp"] }

[features]
default = ["std"]
std = ["primitive-types/std"]
