[package]
name = "prelude"
version = "0.1.0"
authors = ["NEAR <hello@near.org>"]
edition = "2018"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
publish = false
autobenches = false

[dependencies]
borsh = { version = "0.8.2", default-features = false }
ethabi = { git = "https://github.com/darwinia-network/ethabi", branch = "xavier-no-std", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp"] }
sha3 = { version = "0.9.1", default-features = false }

[features]
default = ["std"]
std = ["primitive-types/std"]
contract = []
    