[package]
name = "sdk"
version = "0.1.0"
authors = ["NEAR <hello@near.org>"]
edition = "2018"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
publish = false
autobenches = false

[dependencies]
prelude = { path = "../prelude", default-features = false }
borsh = { version = "0.8.2", default-features = false }
sha3 = { version = "0.9.1", default-features = false }

[features]
contract = []
log = []
