[package]
name = "evm-jsontests"
version = "0.13.1"
license = "GPL-3.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
evm = { path = "../evm" }
primitive-types = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = "2.32"
ethjson = { path = "../ethjson", features = ["test-helpers"] }
parity-crypto = { version = "0.9", features = ["publickey"] }
triehash-ethereum = { path = "../triehash-ethereum" }
ethcore-builtin = { path = "../ethcore-builtin" }
rlp = "0.5"
sha3 = "0.8"
parity-bytes = "0.1"
env_logger = "0.8"
lazy_static = "1.4.0"
