[package]
name = "async-aurora"
version = "0.1.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
description = "Async aurora contract. It parses and calls the promises that are returned by solidity contracts"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "3.1.0"
ethabi = "12.0.0"

[features]
default = []
