[package]
name = "eth-json-test"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
